style.css
/* variables */
:root {
  --background: #000100;
  --background-card: #000f00;
  --tomato-red: #f70d1a;
  --tomato-green: #006400;
}

/* reset */
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
  text-align: center;
}

body * {
  margin: 0;
  padding: 0;
  text-align: center;
}

/* base styles */
html {
  font-family: system-ui, sans-serif;
}

body {
  background-color: var(--background);
  color: white;
  overflow: hidden;
}

main {
  background-color: var(--background-card);
  border: 3px solid #ccc;
  border-radius: 3em;
  margin: 0 0.5dvh;
  padding: 1em;
  height: 100dvh;
  box-sizing: border-box;
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

h1 {
  font-size: clamp(2.5rem, 5vw, 10rem);
}

h2 {
  font-size: clamp(1.5rem, 2.5vw, 10rem);
  margin: 0 0 10px 0;
}

.input {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 10px;
  align-items: center;
  font-size: clamp(1.1rem, 3vw, 3rem);
  padding: 0.1em 0;
}

.unfold-additional-options {
  line-height: 2;
}

button {
  animation: animateGradient 3s linear infinite;
  background:
    linear-gradient(var(--background-card), var(--background-card)) padding-box,
    linear-gradient(
        270deg,
        var(--tomato-red),
        var(--tomato-green),
        var(--tomato-red),
        var(--tomato-green),
        var(--tomato-red),
        var(--tomato-green),
        var(--tomato-red)
      )
      border-box;
  background-size: 400% 400%;
  background-origin: border-box;
  background-clip: padding-box, border-box;

  border: 4px solid transparent;
  border-radius: 12px;
  padding: 10px;
  color: white;
  cursor: pointer;
  font-size: clamp(1rem, 5vw, 2rem);
  transition: background-position 0.3s ease;
}

@keyframes animateGradient {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 100% 50%;
  }
}

/* custom checkbox */
.checkbox-container {
  font-family: system-ui, sans-serif;
  font-size: clamp(1rem, 2vw, 3rem);
  line-height: 1.1;
  display: grid;
  grid-template-columns: auto 1em;
  gap: 0.5em;
}

.checkbox-container + .checkbox-container {
  margin-top: 1em;
}

input[type="checkbox"] {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--background);
  margin: 0;
  font: inherit;
  color: currentColor;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid currentColor;
  border-radius: 0.15em;
  transform: translateY(-0.075em);
  display: grid;
  place-content: center;
}

input[type="checkbox"]::before {
  content: "";
  width: 0.65em;
  height: 0.65em;
  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
  transform: scale(0);
  transform-origin: bottom left;
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1em 1em var(--tomato-green);
}

input[type="checkbox"]:checked::before {
  transform: scale(1);
}

input[type="checkbox"]:focus {
  outline: max(2px, 0.15em) solid currentColor;
  outline-offset: max(2px, 0.15em);
}

/* custom sliders */
.slider-container {
  display: flex;
  flex-direction: row;
  gap: 10px;
  justify-content: center;
  align-items: center;
}

.slider-container > input {
  font-size: clamp(1rem, 5vw, 1.5rem);
}

input[type="range"] {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: 1em;
  background: #ccc;
  outline: none;
  opacity: 0.7;
}

input[type="range"]:hover {
  opacity: 0.9;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  width: 1.2em;
  height: 1.2em;
  border: none;
  border-radius: 1em;
  background-color: var(--tomato-green);
  transition: 0.2s ease-in-out;
}

input[type="range"]::-moz-range-thumb {
  appearance: none;
  cursor: pointer;
  width: 1.3em;
  height: 1.3em;
  border: none;
  border-radius: 1em;
  background-color: var(--tomato-green);
  transition: 0.2s ease-in-out;
}

input[type="range"]:active::-webkit-slider-thumb {
  transform: scale(1.5);
}

input[type="range"]:active::-moz-range-thumb {
  transform: scale(1.5);
}

#pomodoro-amount-slider::-webkit-slider-thumb {
  background-color: var(--tomato-red);
}

#pomodoro-amount-slider::-moz-range-thumb {
  background-color: var(--tomato-red);
}

/* charts */
.chart-section {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  margin-top: 3rem;
  overflow-x: hidden;
}

.chart-container {
  flex: 1;
  aspect-ratio: 9 / 16;
  position: relative;
}

.chart {
  width: 100%;
  height: 100%;
  display: block;
  border: solid #777;
  border-width: 0 1px;
  border-radius: 5%;
  padding: 0 1em;
}

@media (orientation: landscape) {
  .chart-container {
    aspect-ratio: 16 / 9;
  }
}

